[package]
name = "service"
version = "0.1.0"
authors = []
edition = "2018"
# Remove this line if you want to be able to publish this crate as open source on crates.io.
# Otherwise, `publish = false` prevents an accidental `cargo publish` from revealing private source.
publish = false

[profile.release]
debug = true

[dependencies]
chrono = "0.4.38"
fastly = "0.9.12"
http = "1.1.0"
humansize = "2.1.3"
indexmap = "2.2.6"
polyfill-library = { path = "../library" }
maud = "0.26.0"
nodejs-semver = "4.0.0"
regex = "1.10.4"
semver = "1.0.22"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.115"
sha2 = "0.10.8"
urlencoding = "2.1.3"
seahash = "4.1.0"
